<resources>
    <string name="app_name">LabFragmentosPeluchitos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Peluchitos Enterprise</string>
    <string name="nav_header_subtitle">peluchitos@enterprisepelu.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar">Agregar</string>
    <string name="buscar">Buscar</string>
    <string name="inventario">Inventario</string>
    <string name="nombre">Nombre:</string>
    <string name="id">ID:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="precio">Precio:</string>
    <string name="ingrese_el_nombre_del_peluchito">Ingrese el nombre del peluchito</string>
    <string name="eliminar">Eliminar</string>
</resources>
