<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_agregar"
            android:icon="@drawable/buscarimagen"
            android:title="@string/agregar" />
        <item
            android:id="@+id/nav_buscar"
            android:icon="@drawable/buscarimagen"
            android:title="@string/buscar" />
        <item
            android:id="@+id/nav_eliminar"
            android:icon="@drawable/buscarimagen"
            android:title="@string/eliminar" />
        <item
            android:id="@+id/nav_inventario"
            android:icon="@drawable/buscarimagen"
            android:title="@string/inventario" />
    </group>

</menu>
