<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inventario"/>


<androidx.cardview.widget.CardView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/id"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:id="@+id/tvID"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/nombre"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:id="@+id/tvNombre"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/cantidad"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:id="@+id/tvCantidad"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="@string/precio"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:id="@+id/tvPrecio"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

</androidx.cardview.widget.CardView>
</LinearLayout>