<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="6dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="40sp"
            android:fontFamily="cursive"
            android:text="@string/agregar" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/id"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="4"
                android:id="@+id/etId"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/nombre"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="4"
                android:id="@+id/etNombre"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/cantidad"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="4"
                android:id="@+id/etCantidad"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/precio"/>
            <EditText
                android:layout_width="0dp"
                android:layout_weight="4"
                android:id="@+id/etPrecio"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/bnAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/agregar" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycler"/>

    </LinearLayout>

</FrameLayout>